k8s/helm/ingress/ingress-tomcat.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-tomcat
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: tomcat.magedu.com
      http:
        paths:
          - path: /
            backend:
              serviceName: tomcat
              servicePort: 8080
